[gd_scene load_steps=3 format=3 uid="uid://bvx8k3n2yw1fs"]

[ext_resource type="Script" path="res://scripts/world/ParallaxSpaceBackground.gd" id="1_parallax"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_black"]
blend_mode = 1

[node name="ParallaxSpaceBackground" type="ParallaxBackground"]
layer = -100
scroll_ignore_camera_zoom = true
script = ExtResource("1_parallax")

[node name="BlackBackground" type="ColorRect" parent="."]
z_index = -1000
offset_left = -10000.0
offset_top = -10000.0
offset_right = 10000.0
offset_bottom = 10000.0
color = Color(0, 0, 0, 1)

[node name="GalaxyLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.02, 0.02)
motion_mirroring = Vector2(6000, 6000)

[node name="StarLayer1" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.05, 0.05)
motion_mirroring = Vector2(6000, 6000)

[node name="NebulaLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.15, 0.15)
motion_mirroring = Vector2(6000, 6000)

[node name="StarLayer2" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.25, 0.25)
motion_mirroring = Vector2(6000, 6000)

[node name="CelestialLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.35, 0.35)
motion_mirroring = Vector2(6000, 6000)

[node name="StarLayer3" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(6000, 6000)

[node name="CosmicDustShaderLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(6000, 6000)

[node name="DustParticlesLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(6000, 6000)

[node name="DriftParticlesLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.75, 0.75)
motion_mirroring = Vector2(6000, 6000)

[node name="SparkleParticlesLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.85, 0.85)
motion_mirroring = Vector2(6000, 6000)
